--- a/pcgrr/inst/templates/pcgr_quarto_report.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report.qmd
@@ -73,8 +73,6 @@ if(as.logical(pcg_report$settings$conf$assay_properties$vcf_tumor_only) == TRUE)
 #| eval: !expr pcg_report$content$snv_indel$eval == TRUE
 ```
 
-<br>
-
 ```{r pcgr_cna}
 #| child: 'pcgr_quarto_report/cna.qmd'
 #| eval: !expr pcg_report$content$cna$eval == TRUE
@@ -84,19 +82,19 @@ if(as.logical(pcg_report$settings$conf$assay_properties$vcf_tumor_only) == TRUE)
 
 ```{r pcgr_signatures}
 #| child: 'pcgr_quarto_report/mutational_signature.qmd'
-#| eval: !expr as.logical(pcg_report$settings$conf$somatic_snv$mutational_signatures$run) == TRUE
+#| eval: !expr as.logical(pcg_report$content$mutational_signatures$eval) == TRUE
 ```
 
 <br>
 
 ```{r pcgr_msi}
 #| child: 'pcgr_quarto_report/msi.qmd'
-#| eval: !expr as.logical(pcg_report$settings$conf$somatic_snv$msi$run) == TRUE
+#| eval: !expr as.logical(pcg_report$content$msi$eval) == TRUE
 ```
 
 ```{r conditional_tmb}
 #| child: 'pcgr_quarto_report/mutational_burden.qmd'
-#| eval: !expr as.logical(pcg_report$settings$conf$somatic_snv$tmb$run) == TRUE
+#| eval: !expr as.logical(pcg_report$content$tmb$eval) == TRUE
 ```
 
 ```{r conditional_expresson}
