--- a/pcgrr/inst/templates/pcgr_quarto_report/snv_indel/variant_filtering.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/snv_indel/variant_filtering.qmd
@@ -32,7 +32,7 @@ if(NROW(pcg_report$content$snv_indel$callset$variant_unfiltered) > 0 &
 
 ### Variant filtering
 
-In an effort to minimize the presence/impact of germline events from input variants (SNVs/InDels) called through a **tumor-only assay**, we here show the results of germline variant filters applied on the raw input set. The filters provide a classification of variants as somatic or likely germline (catched by various filters), the latter set not included for downstream analysis in this report.
+In an effort to minimize the presence/impact of germline events from input variants (SNVs/InDels) called through a **tumor-only assay**, we here show the results of germline variant filters applied on the raw input set. The filters provide a classification of variants as somatic or likely germline (i.e. catched by various filters), where the latter set are removed/excluded, and not used for any analysis shown in this report.
 
 ::: {.panel-tabset}
 
@@ -116,4 +116,4 @@ The variant filtering has been performed based on the following criteria:
 
 :::
 
-<br><br>
+<br>
