--- a/pcgrr/inst/templates/pcgr_quarto_report/snv_indel/oncogenicity.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/snv_indel/oncogenicity.qmd
@@ -207,8 +207,8 @@ if(any(!is.na(noncoding_variant_set$CALL_CONFIDENCE))){
   i_set2 <- i_set2 + 1
 }
 
-if(any(!is.na(coding_variant_set$DP_TUMOR)) & 
-   any(!is.na(coding_variant_set$VAF_TUMOR))){
+if(any(!is.na(noncoding_variant_set$DP_TUMOR)) & 
+   any(!is.na(noncoding_variant_set$VAF_TUMOR))){
   filter_set1[[i_set1]] <- crosstalk::filter_slider(
     "DP_TUMOR", "Sequencing depth tumor", 
     noncoding_variants_shared, ~DP_TUMOR, ticks = F, sep = F)
@@ -220,8 +220,8 @@ if(any(!is.na(coding_variant_set$DP_TUMOR)) &
   i_set2 <- i_set2 + 1
 }
 
-if(any(!is.na(coding_variant_set$DP_CONTROL)) & 
-   any(!is.na(coding_variant_set$VAF_CONTROL))){
+if(any(!is.na(noncoding_variant_set$DP_CONTROL)) & 
+   any(!is.na(noncoding_variant_set$VAF_CONTROL))){
   filter_set1[[i_set1]] <- crosstalk::filter_slider(
     "DP_CONTROL", "Sequencing depth control", 
     noncoding_variants_shared, ~DP_CONTROL, ticks = F, sep = F)
