add example files

--- a/pcgrr/inst/templates/pcgr_quarto_report/snv_indel/oncogenicity.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/snv_indel/oncogenicity.qmd
@@ -14,7 +14,7 @@ In order to maintain responsiveness of client-side data interaction, only the to
 
 ## Note - oncogenicity versus actionability
 
-The oncogenicity classification of variants performed in PCGR is based on an implementation of the ClinGen/VICC SOPs for variant oncogenicity evaluation. This classification is based on multiple properties of a variant (hotspot occurrence, variant consequence (i.e. loss-of-function), population frequency etc.). Notably, the current implementation may provide classifications that do not always correspond with clinical actionability, e.g. due to limited functional evidence available in PCGR. This implies that some variants that are being classified as VUS when it comes to oncogenicity (yet still with a relatively high _oncogenicity score_), may still be listed as actionable below. When more functional variant evidence gets integrated in PCGR (e.g. from [multiplexed assays of variant effect (MAVE) efforts](https://mavedb.org/#/)), the concordance between oncogenicity and actionability is likely to improve further.
+The oncogenicity classification of variants performed in PCGR is based on an implementation of the ClinGen/VICC SOPs for variant oncogenicity evaluation. This classification is based on multiple properties of variants (hotspot occurrence, variant consequence (i.e. loss-of-function), population frequency etc.). Notably, the current implementation may provide classifications that do not always correspond with clinical actionability, e.g. due to the fact the functional variant evidence (frequently requiring manual curation) is limited in the reference data coming with PCGR. This implies that the oncogenic classification is somewhat conservative in its current form, and that variants classified as VUS when it comes to oncogenicity by PCGR (yet still with a relatively high _oncogenicity score_), may still be listed as actionable below. When more functional variant evidence gets integrated in PCGR (e.g. from [multiplexed assays of variant effect (MAVE) efforts](https://mavedb.org/#/)), the concordance between oncogenicity and actionability is likely to improve further.
 
 :::
 
