--- a/pcgrr/inst/templates/pcgr_quarto_report/documentation.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/documentation.qmd
@@ -82,9 +82,12 @@ for(i in 1:NROW(ref_datasets)){
 
 #### Oncogenicity classification
 
-Somatic aberrations (SNV/InDels) are evaluated for oncogenicity through an implementation of SOP's proposed by VICC/ClinGen [@Horak2022-uh]. Here, various properties of the variants and genes affected are assigned specific scores, which in turn are aggregated towards an overall oncogenicity score. Specifically, the following criteria are applied:
+Somatic aberrations (SNV/InDels) are evaluated for oncogenicity through an implementation of standard operating procedures proposed by VICC/CGC/ClinGen [@Horak2022-uh]. Here, various properties of the variants and genes affected are assigned specific scores according to several criteria, both negative and positive, pending on whether the properties support an oncogenic or benign variant type. These scores are in turn aggregated towards an overall oncogenicity score. 
 
-For somatic copy number aberrations, we list **all oncogenes subject to amplifications**, as well as**tumor suppressor genes subject to homozygous deletions**.
+Note that all properties/criteria provided in the SOP's are _not_ readily implemented in PCGR, specifically the ones requiring manual curation or expert review (i.e. experimental oncogenic variant evidence, requring support from _in vitro_ or _in vivo_ functional studies (criteria _OM1/OS1_)).
+This implies that some variants interrogated by PCGR may not be classified as oncogenic, even though they could be classified as such by manual review. Considering the nature of our current implementation, we have thus also adopted slightly different score thresholds for variant classifications to those proposed originally by [@Horak2022-uh]. We are working to further improve the oncogenicity classification in PCGR, and welcome feedback on this matter.
+
+Note also that for somatic copy number aberrations, we showcase potential oncogenic events as **proto-oncogenes subject to amplifications** (where level of amplification is configurable by the user), as well as**tumor suppressor genes subject to homozygous deletions**.
 
 #### Actionability classificaton
 
@@ -129,36 +132,11 @@ Note that the MSI classifier is applied only for WGS/WES tumor-control sequencin
 
 <br>
 
-#### Kataegis
-
-Kataegis describes a pattern of localized hypermutations identified in some cancer genomes, in which a large number of highly-patterned basepair mutations occur in a small region of DNA (ref Wikipedia). Kataegis is prevalently seen among breast cancer patients, and it is also exists in lung cancers, cervical, head and neck, and bladder cancers, as shown in the results from tracing APOBEC mutation signatures (ref Wikipedia). PCGR implements the kataegis detection algorithm outlined in the [KataegisPortal R package](https://github.com/MeichunCai/KataegisPortal). 
-
-Explanation of key columns in the resulting table of potential kataegis events: 
-
-* __weight.C>X__: proportion of C>X mutations
-* __confidence__: confidence degree of potential kataegis events (range: 0 to 3)
-    - 0 - a hypermutation with weight.C>X < 0.8; 
-    - 1 - one hypermutation with weight.C>X >= 0.8 in a chromosome; 
-    - 2 - two hypermutations with weight.C>X >= 0.8 in a chromosome; 
-    - 3 - high confidence with three or more hypermutations with weight.C>X >= 0.8 in a chromosome)
-
-<br>
-
-#### Germline findings
-
-For PCGR reports that are fueled with CPSR report contents (JSON), we here list the main findings from the CPSR report, i.e. the collection of __Pathogenic/Likely Pathogenic/VUS variants__ (ClinVar and novel CPSR-classified variants). We also show whether any of the query variants are associated with established biomarker evidence items with respect to cancer predisposition, prognosis, therapeutic regimens etc.
-
-<br>
 
 #### Expression
 
-If data is provided, PCGR reports may include a section on gene expression, where we provide a summary of the expression levels of genes that are known to be of clinical relevance in the tumor type in question. The expression levels are based on bulk RNA-seq data from the tumor sample, and are presented as normalized expression values (TPM). We also perform a correlation analysis of the gene expression profile of the input sample with the profiles seen in other reference collections (The Cancer Genome Atlas, DepMap cell lines, TreeHouse pediactric cancers).
+If data is provided, PCGR reports may include a section on gene expression, where we provide an analysis of expression outliers with respect to reference cohorts (TCGA). The expression levels are based on bulk RNA-seq data from the tumor sample, and are presented as normalized expression values (TPM). We also perform a correlation analysis of the gene expression profile of the input sample with the profiles seen in other reference collections (The Cancer Genome Atlas, DepMap cell lines, TreeHouse pediactric cancers).
 
-#### Clinical trials
-
-Each report is provided with a list of trials for the tumor type in question, where we limit the trials listed to ongoing or forthcoming trials with a "molecular focus" (presence of molecular biomarkers in inclusion criteria, targeted drugs as interventions etc.). Recognition of biomarkers in trials is conducted through an in-house text mining procedure. 
-
-Note that the trials have currently not been subject to any matching with respect to the molecular profile of the tumor, trials are thus basically unprioritized, and have to be explored interactively by the user in order to discover relevant trials. 
 
 <br>
 
